@@ -96,6 +96,12 @@
         <version>0.0.8</version>
         <configuration>
           <mainClass>com.crypto.Main</mainClass>
+          <options>
+            <option>--add-opens</option>
+            <option>java.base/java.lang=ALL-UNNAMED</option>
+            <option>--add-opens</option>
+            <option>java.base/java.util=ALL-UNNAMED</option>
+          </options>
         </configuration>
       </plugin>
     </plugins>
